--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^11.18.2",
     "input-otp": "^1.4.2",
+    "katex": "^0.16.28",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
     "plotly.js-dist-min": "^2.27.0",
@@ -73,6 +74,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "@testing-library/jest-dom": "^6.6.0",
     "@testing-library/react": "^16.0.0",
+    "@types/katex": "^0.16.8",
     "@types/node": "^22.16.5",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
